Page layout setup and form creation

--- a/www/about.html
+++ b/www/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>InspectX</title>
+    <title>About - InspectX</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/about">About Inspections</a>
+              <a class="active nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/about">About Inspections</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/contact">Contact Us</a>
@@ -56,22 +56,22 @@
         <hr class="mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">There are a lot of things to check on a car before buying, we make it easy! Every InspectX approved mechanic drives out to the sellers vehicle and performs our standardized inspection.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">Want to know exactly what we check for?</p>
           </div>
         </div>
         <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="#">
+          <a class="btn btn-xl btn-outline-dark" href="img/checklist.pdf" target="_blank">
             <i class="fa fa-download mr-2"></i>
-            Download Now!
+            Download the Inspection
           </a>
         </div>
       </div>
     </section>
 
-    <section class="bg-primary portfolio" id="portfolio">
+    <section class="portfolio" id="portfolio">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Our Mechanics</h2>
         <hr class="mb-5">
