Dynamic city selection

--- a/static/email/email_html_body.html
+++ b/static/email/email_html_body.html
@@ -51,7 +51,7 @@
 
             <div style="Margin-left: 20px;Margin-right: 20px;">
       <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-        <p class="size-17" style="Margin-top: 0;Margin-bottom: 0;font-size: 17px;line-height: 26px;" lang="x-size-17">Thank you for your interest {}.</p><p class="size-17" style="Margin-top: 20px;Margin-bottom: 0;font-size: 17px;line-height: 26px;" lang="x-size-17">We have received your request for a {} on your {}.&nbsp;</p><p class="size-17" style="Margin-top: 20px;Margin-bottom: 20px;font-size: 17px;line-height: 26px;" lang="x-size-17">We will respond to you directly with the next steps!</p>
+          <p class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-size: 17px;line-height: 26px;" lang="x-size-18">Thank you for your interest <strong>{}</strong>.</p><p class="size-18" style="Margin-top: 20px;Margin-bottom: 0;font-size: 17px;line-height: 26px;" lang="x-size-18">We have received your request for the {} on your <strong>{}</strong>.&nbsp;</p><p class="size-18" style="Margin-top: 20px;Margin-bottom: 20px;font-size: 17px;line-height: 26px;" lang="x-size-18">We will respond to you directly with the next steps!</p>
       </div>
     </div>
 
